CREATE SCHEMA IF NOT EXISTS "schema_travel";

SET search_path TO "schema_travel";

-- Extensions: pg_trgm for trigram similarity, unaccent to strip Vietnamese
-- diacritics. Used by the prose-extraction pipeline to match LLM-mentioned
-- place names (often spelled without diacritics, slightly truncated) to rows
-- in places.name. CREATE EXTENSION is idempotent.
CREATE EXTENSION IF NOT EXISTS pg_trgm;
CREATE EXTENSION IF NOT EXISTS unaccent;

-- Enums
CREATE TYPE "budget_category" AS ENUM ('BUDGET', 'MODERATE', 'LUXURY');

CREATE TYPE "category" AS ENUM ('FOOD', 'LODGING', 'TRANSPORT', 'ATTRACTION');

CREATE TYPE "provider" AS ENUM ('local', 'google', 'facebook');

CREATE TYPE "role" AS ENUM ('EDITOR', 'VIEWER');

CREATE TYPE "role_ai_chat_message" AS ENUM ('USER', 'ASSISTANT');

CREATE TYPE "status" AS ENUM ('DRAFT', 'PUBLISHED');

CREATE TYPE "status_collab" AS ENUM ('PENDING', 'ACCEPTED');

CREATE TYPE "place_category" AS ENUM ('ATTRACTION', 'FOOD', 'STAY');

-- Tables
CREATE TABLE "users" (
    "id" UUID NOT NULL PRIMARY KEY DEFAULT gen_random_uuid (),
    "email" VARCHAR(255) NOT NULL UNIQUE,
    "password_hash" VARCHAR(255),
    "full_name" VARCHAR(255) NOT NULL,
    "avatar_url" VARCHAR(255),
    "provider" "provider" NOT NULL DEFAULT 'local',
    "created_at" TIMESTAMP NOT NULL DEFAULT NOW()
);

CREATE TABLE "itineraries" (
    "id" UUID NOT NULL PRIMARY KEY DEFAULT gen_random_uuid (),
    "owner_id" UUID NOT NULL,
    "title" VARCHAR(255) NOT NULL,
    "destination" VARCHAR(255) NOT NULL,
    "budget" NUMERIC NOT NULL,
    "start_date" DATE NOT NULL,
    "end_date" DATE NOT NULL,
    "status" "status" NOT NULL DEFAULT 'DRAFT',
    "cover_image_url" TEXT,
    "rating" REAL NOT NULL DEFAULT 0,
    "view_count" INTEGER NOT NULL DEFAULT 0,
    "clone_count" INTEGER NOT NULL DEFAULT 0,
    "cloned_from_id" UUID,
    "guest_count" INTEGER NOT NULL DEFAULT 1,
    "tags" TEXT [] DEFAULT '{}',
    "budget_category" "budget_category" NOT NULL DEFAULT 'MODERATE',
    "created_at" TIMESTAMP NOT NULL DEFAULT NOW()
);

CREATE TABLE "activities" (
    "id" UUID NOT NULL PRIMARY KEY DEFAULT gen_random_uuid (),
    "itinerary_id" UUID NOT NULL,
    "place_id" UUID,
    "day_number" INTEGER NOT NULL,
    "order_index" INTEGER NOT NULL,
    "title" VARCHAR(255) NOT NULL,
    "category" "category" NOT NULL,
    "lat" DOUBLE PRECISION,
    "lng" DOUBLE PRECISION,
    "estimated_cost" NUMERIC NOT NULL DEFAULT 0,
    "start_time" TIME,
    "end_time" TIME,
    "image_url" VARCHAR(255),
    "notes" TEXT,
    "created_at" TIMESTAMP NOT NULL DEFAULT NOW()
);

CREATE TABLE "collaborators" (
    "id" UUID NOT NULL PRIMARY KEY DEFAULT gen_random_uuid (),
    "itinerary_id" UUID NOT NULL,
    -- Either user_id (registered invitee) or email (pending invite for a
    -- not-yet-registered address) must be set. The CHECK below enforces it.
    "user_id" UUID,
    "email" TEXT,
    "invited_by" UUID NOT NULL,
    "role" "role" NOT NULL DEFAULT 'VIEWER',
    "status" "status_collab" NOT NULL DEFAULT 'PENDING',
    "joined_at" TIMESTAMP,
    CONSTRAINT collaborators_invitee_present CHECK (user_id IS NOT NULL OR email IS NOT NULL)
);

-- Block re-inviting the same email on the same itinerary (pending case only).
CREATE UNIQUE INDEX collaborators_pending_email_uniq
    ON "collaborators" (itinerary_id, lower(email))
    WHERE email IS NOT NULL;

-- Transactional outbox for WebSocket broadcasts. Handlers INSERT inside the
-- same Tx as the mutation; a background worker drains the table.
CREATE TABLE "outbox" (
    "id"            UUID         PRIMARY KEY DEFAULT gen_random_uuid(),
    "event_type"    TEXT         NOT NULL,
    "room_id"       TEXT         NOT NULL,
    "payload"       JSONB        NOT NULL,
    "created_at"    TIMESTAMPTZ  NOT NULL DEFAULT NOW(),
    "dispatched_at" TIMESTAMPTZ,
    "retry_count"   INT          NOT NULL DEFAULT 0,
    "last_error"    TEXT
);

CREATE INDEX outbox_pending_idx
    ON "outbox" (created_at)
    WHERE dispatched_at IS NULL;

CREATE TABLE "ai_chat_messages" (
    "id" UUID NOT NULL PRIMARY KEY DEFAULT gen_random_uuid (),
    "session_id" UUID,
    "itinerary_id" UUID,
    "role" "role_ai_chat_message" NOT NULL,
    "content" TEXT NOT NULL,
    "metadata" JSONB,
    "created_at" TIMESTAMP NOT NULL DEFAULT NOW()
);

CREATE TABLE "ai_chat_sessions" (
    "id" UUID NOT NULL PRIMARY KEY DEFAULT gen_random_uuid (),
    "user_id" UUID NOT NULL,
    "title" TEXT NOT NULL,
    "destination" TEXT,
    "message_count" INTEGER NOT NULL DEFAULT 0,
    "saved_itinerary_id" UUID,
    "created_at" TIMESTAMP NOT NULL DEFAULT NOW(),
    "updated_at" TIMESTAMP NOT NULL DEFAULT NOW()
);

CREATE TABLE "places" (
    "id" UUID NOT NULL PRIMARY KEY DEFAULT gen_random_uuid (),
    "destination" VARCHAR(255) NOT NULL,
    "category" "place_category" NOT NULL,
    "name" VARCHAR(255) NOT NULL,
    "name_en" VARCHAR(255),
    "description" TEXT,
    "address" TEXT,
    "area" VARCHAR(255),
    "latitude" DOUBLE PRECISION,
    "longitude" DOUBLE PRECISION,
    "cover_image" TEXT,
    "images" TEXT [] DEFAULT '{}',
    "rating" DOUBLE PRECISION,
    "review_count" INTEGER NOT NULL DEFAULT 0,
    "must_visit" BOOLEAN NOT NULL DEFAULT FALSE,
    "priority_score" INTEGER NOT NULL DEFAULT 0,
    "best_time_of_day" VARCHAR(255),
    "tags" TEXT [] DEFAULT '{}',
    "open_time" TIME,
    "close_time" TIME,
    "hours" TEXT,
    "recommended_duration" INTEGER,
    "base_price" INTEGER,
    "phone" VARCHAR(50),
    "website" TEXT,
    "external_id" VARCHAR(100),
    "external_source" VARCHAR(50),
    "metadata" JSONB NOT NULL DEFAULT '{}'::jsonb,
    "source_url" TEXT,
    "price_updated_at" TIMESTAMP,
    "created_at" TIMESTAMP NOT NULL DEFAULT NOW(),
    "updated_at" TIMESTAMP NOT NULL DEFAULT NOW()
);

CREATE TABLE "user_saved_places" (
    "user_id" UUID NOT NULL,
    "place_id" UUID NOT NULL,
    "saved_at" TIMESTAMP NOT NULL DEFAULT NOW(),
    PRIMARY KEY ("user_id", "place_id")
);

CREATE TABLE "combos" (
    "id" UUID NOT NULL PRIMARY KEY DEFAULT gen_random_uuid (),
    "destination" VARCHAR(255) NOT NULL,
    "name" VARCHAR(255) NOT NULL,
    "cover_image" TEXT,
    "provider" VARCHAR(255),
    "price_per_person" INTEGER,
    "includes" TEXT [] DEFAULT '{}',
    "benefits" TEXT [] DEFAULT '{}',
    "duration_days" INTEGER,
    "requires_overnight" BOOLEAN NOT NULL DEFAULT FALSE,
    "book_url" TEXT,
    "price_updated_at" TIMESTAMP,
    "created_at" TIMESTAMP NOT NULL DEFAULT NOW(),
    "updated_at" TIMESTAMP NOT NULL DEFAULT NOW()
);

CREATE INDEX "idx_place_dest" ON "places" ("destination");

CREATE INDEX "idx_place_dest_cat" ON "places" ("destination", "category");

CREATE INDEX "idx_place_area" ON "places" ("area");

CREATE INDEX "idx_place_coords" ON "places" ("latitude", "longitude");

CREATE INDEX "idx_place_rating" ON "places" ("rating");

CREATE INDEX "idx_place_review_count" ON "places" ("review_count");

CREATE UNIQUE INDEX "idx_place_external" ON "places" ("external_source", "external_id")
    WHERE "external_id" IS NOT NULL;

CREATE INDEX "idx_combo_dest" ON "combos" ("destination");

CREATE INDEX "idx_combo_dest_price" ON "combos" (
    "destination",
    "price_per_person"
);

-- Foreign Keys (đúng chiều)
ALTER TABLE "itineraries"
ADD CONSTRAINT "fk_itineraries_owner" FOREIGN KEY ("owner_id") REFERENCES "users" ("id") ON DELETE CASCADE;

ALTER TABLE "itineraries"
ADD CONSTRAINT "fk_itineraries_cloned" FOREIGN KEY ("cloned_from_id") REFERENCES "itineraries" ("id") ON DELETE SET NULL;

ALTER TABLE "activities"
ADD CONSTRAINT "fk_activities_itinerary" FOREIGN KEY ("itinerary_id") REFERENCES "itineraries" ("id") ON DELETE CASCADE;

ALTER TABLE "activities"
ADD CONSTRAINT "fk_activities_place" FOREIGN KEY ("place_id") REFERENCES "places" ("id") ON DELETE SET NULL;

ALTER TABLE "activities"
ADD CONSTRAINT "uq_activity_order" UNIQUE (
    "itinerary_id",
    "day_number",
    "order_index"
);

ALTER TABLE "collaborators"
ADD CONSTRAINT "fk_collaborators_itinerary" FOREIGN KEY ("itinerary_id") REFERENCES "itineraries" ("id") ON DELETE CASCADE;

ALTER TABLE "collaborators"
ADD CONSTRAINT "fk_collaborators_user" FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE;

ALTER TABLE "collaborators"
ADD CONSTRAINT "fk_collaborators_invited_by" FOREIGN KEY ("invited_by") REFERENCES "users" ("id");

ALTER TABLE "ai_chat_messages"
ADD CONSTRAINT "fk_chat_itinerary" FOREIGN KEY ("itinerary_id") REFERENCES "itineraries" ("id") ON DELETE CASCADE;

ALTER TABLE "ai_chat_sessions"
ADD CONSTRAINT "fk_ai_chat_sessions_user" FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE;

ALTER TABLE "ai_chat_sessions"
ADD CONSTRAINT "fk_ai_chat_sessions_saved_itinerary" FOREIGN KEY ("saved_itinerary_id") REFERENCES "itineraries" ("id") ON DELETE SET NULL;

ALTER TABLE "ai_chat_messages"
ADD CONSTRAINT "fk_chat_session" FOREIGN KEY ("session_id") REFERENCES "ai_chat_sessions" ("id") ON DELETE CASCADE;

ALTER TABLE "user_saved_places"
ADD CONSTRAINT "fk_saved_user" FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE;

ALTER TABLE "user_saved_places"
ADD CONSTRAINT "fk_saved_place" FOREIGN KEY ("place_id") REFERENCES "places" ("id") ON DELETE CASCADE;

-- Trigram index for fuzzy place-name lookup (prose-extraction pipeline).
-- See backend gormigrate 202605240015 for the canonical version — this
-- schema.sql copy only runs on first-init of a fresh postgres data dir;
-- existing deployments get the same shape via the Go migration.
CREATE OR REPLACE FUNCTION "f_unaccent"(t text)
    RETURNS text LANGUAGE SQL IMMUTABLE PARALLEL SAFE
    AS $func$ SELECT unaccent(t) $func$;

CREATE INDEX IF NOT EXISTS idx_places_name_trgm
    ON "places" USING GIN (f_unaccent(lower("name")) gin_trgm_ops);
